--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.8.5",
 		"@rtk-query/graphql-request-base-query": "^2.2.0",
+		"@types/styled-components": "^5.1.26",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
 		"dotenv": "^16.0.3",
@@ -41,6 +42,7 @@
 		"react-scripts": "^5.0.1",
 		"redux": "^4.1.2",
 		"redux-thunk": "^2.4.1",
+		"styled-components": "^5.3.6",
 		"typescript": "^4.6.3"
 	},
 	"devDependencies": {
