--- a/web/package.json
+++ b/web/package.json
@@ -19,71 +19,38 @@
 		]
 	},
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development webpack --mode development",
 		"build": "cross-env NODE_ENV=production webpack --mode production",
-		"watch": "cross-env NODE_ENV=development webpack --mode development --watch",
 		"start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
 		"stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.8.5",
-		"@rtk-query/graphql-request-base-query": "^2.2.0",
-		"@types/styled-components": "^5.1.26",
-		"axios": "^0.27.2",
-		"classnames": "^2.3.1",
 		"dotenv": "^16.0.3",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"jwt-decode": "^3.1.2",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-redux": "^8.0.4",
 		"react-route": "1.0.3",
 		"react-router-dom": "6.4.1",
-		"react-scripts": "^5.0.1",
-		"redux": "^4.1.2",
-		"redux-thunk": "^2.4.1",
-		"styled-components": "^5.3.6",
-		"typescript": "^4.6.3"
+		"redux": "^4.1.2"
 	},
 	"devDependencies": {
-		"@babel/core": "7.19.3",
-		"@babel/plugin-proposal-class-properties": "7.18.6",
-		"@babel/polyfill": "7.12.1",
-		"@babel/preset-env": "7.19.3",
-		"@babel/preset-react": "7.18.6",
-		"@types/classnames": "^2.2.9",
-		"@types/lodash-es": "^4.17.5",
-		"@types/node": "^18.8.1",
-		"@types/react": "^18.0.21",
-		"@types/react-dom": "^18.0.6",
-		"@types/react-redux": "^7.1.5",
-		"@types/react-router": "^5.1.5",
-		"@types/redux-actions": "^2.6.1",
-		"@types/webpack": "^5.28.0",
-		"@types/webpack-env": "^1.15.1",
+		"classnames": "^2.3.1",
+		"@reduxjs/toolkit": "^1.8.5",
 		"babel-loader": "8.2.5",
+		"@babel/polyfill": "7.12.1",
 		"clean-webpack-plugin": "4.0.0",
 		"cross-env": "7.0.3",
 		"css-loader": "6.7.1",
 		"file-loader": "6.2.0",
 		"formik": "2.2.9",
 		"html-webpack-plugin": "5.5.0",
-		"lodash": "^4.17.21",
-		"lodash-es": "^4.17.21",
 		"mini-css-extract-plugin": "2.6.1",
-		"node-sass": "7.0.3",
 		"optimize-css-assets-webpack-plugin": "6.0.1",
 		"postcss-loader": "7.0.1",
-		"react-redux": "7.2.6",
-		"react-uuid": "^1.0.2",
-		"redux-devtools-extension": "2.13.9",
+		"style-loader": "^3.3.1",
 		"sass": "1.55.0",
 		"sass-loader": "13.0.2",
-		"scss-loader": "0.0.1",
-		"style-loader": "3.3.1",
-		"terser-webpack-plugin": "5.3.6",
 		"ts-loader": "^9.2.8",
-		"web-vitals": "3.0.2",
+		"typescript": "^4.6.3",
 		"webpack": "^5.74.0",
 		"webpack-bundle-analyzer": "4.6.1",
 		"webpack-cli": "4.10.0",
