responsive header & add save settings data in local storage

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -21,6 +21,7 @@
 		"removeComments": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"outDir": "build",
 		"baseUrl": "src",
 		"paths": {
