add gulp typescriot

--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -9,7 +9,7 @@
 		"maintained node versions"
 	],
 	"scripts": {
-		"dev": "gulp dev",
+		"start": "gulp start",
 		"build": "gulp build"
 	},
 	"devDependencies": {
@@ -28,5 +28,9 @@
 		"gulp-uglify": "^3.0.2",
 		"imagemin": "^8.0.1",
 		"sass": "^1.49.8"
+	},
+	"dependencies": {
+		"gulp-typescript": "^6.0.0-alpha.1",
+		"typescript": "^4.9.4"
 	}
 }
