--- a/chrome-extension/tsconfig.json
+++ b/chrome-extension/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es6",
-		"lib": ["es6", "es7", "dom"],
+		"target": "ES5",
+		"lib": ["ES6", "ES7", "DOM"],
 		"allowSyntheticDefaultImports": true,
 		"allowJs": true,
 		"skipLibCheck": true,
@@ -25,7 +25,7 @@
 		"outDir": "build",
 		"baseUrl": "src",
 		"paths": {
-			"app/*": ["./app/*"]
+			"src/*": ["./src/*"]
 		}
 	},
 	"include": ["src", "custom.d.ts"]
