--- a/chrome-extension/src/manifest.json
+++ b/chrome-extension/src/manifest.json
@@ -2,38 +2,14 @@
 	"name": "Pomodoro timer",
 	"version": "0.0.1",
 	"description": "Pomodoro timer",
-	"permissions": ["storage", "tabs", "fontSettings"],
-	"host_permissions": ["https://*.youtube.com/*"],
-	"background": {
-		"service_worker": "./js/background.js"
-	},
-	"content_scripts": [
-		{
-			"matches": ["https://*.youtube.com/*"],
-			"js": ["./js/contentScript.js"]
-		}
-	],
-	"web_accessible_resources": [
-		{
-			"resources": [
-				"img/bookmark.png",
-				"img/play.png",
-				"img/delete.png",
-				"img/save.png",
-				"fonts/*",
-				["fonts/*"],
-				["*.ttf"]
-			],
-			"matches": ["https://*.youtube.com/*"]
-		}
-	],
+	"permissions": ["storage", "fontSettings"],
 	"action": {
 		"default_icon": {
-			"16": "./img/icons/icon-16.png",
-			"32": "./img/icons/icon-32.png",
-			"48": "./img/icons/icon-48.png",
-			"64": "./img/icons/icon-64.png",
-			"128": "./img/icons/icon-128.png"
+			"16": "./img/icon-16.png",
+			"32": "./img/icon-32.png",
+			"48": "./img/icon-48.png",
+			"64": "./img/icon-64.png",
+			"128": "./img/icon-128.png"
 		},
 		"default_title": "Pomodoro timer",
 		"default_popup": "index.html"
