--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -35,7 +35,7 @@
 		"cross-env": "7.0.3",
 		"css-loader": "6.7.1",
 		"dotenv": "^16.0.3",
-		"file-loader": "6.2.0",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "5.5.0",
 		"mini-css-extract-plugin": "2.6.1",
 		"optimize-css-assets-webpack-plugin": "6.0.1",
