--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.24",
+    "@types/react": "^18.0.27",
     "@types/react-native": "~0.70.6",
     "jest": "^26.6.3",
     "jest-expo": "~47.0.1",
