update mobile, release 0.0.1 version

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
-    "version": "1.0.0",
+    "name": "Pomodoro timer",
+    "slug": "PomodoroTimer",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -10,7 +10,7 @@
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#f0feff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -24,11 +24,17 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#f0feff"
+      },
+      "package": "com.aliaksei.hryhoryeu.PomodoroTimer"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ef43453a-d50c-4078-aac2-60c8495883bc"
+      }
     }
   }
 }
