--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pomodoro-mobile",
-	"version": "0.0.1",
+	"version": "0.0.11",
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
 		"start": "expo start",
@@ -13,39 +13,40 @@
 		"preset": "jest-expo"
 	},
 	"dependencies": {
-		"@expo/vector-icons": "^13.0.0",
+		"@expo/vector-icons": "^14.0.2",
 		"@react-navigation/bottom-tabs": "^6.0.5",
 		"@react-navigation/native": "^6.0.2",
 		"@react-navigation/native-stack": "^6.1.0",
 		"@reduxjs/toolkit": "^1.9.2",
-		"expo": "~47.0.12",
-		"expo-asset": "~8.7.0",
-		"expo-av": "~13.0.2",
-		"expo-constants": "~14.0.2",
-		"expo-font": "~11.0.1",
-		"expo-linking": "~3.3.0",
-		"expo-splash-screen": "~0.17.5",
-		"expo-status-bar": "~1.4.2",
-		"expo-system-ui": "~2.0.1",
-		"expo-web-browser": "~12.0.0",
-		"react": "18.1.0",
-		"react-dom": "18.1.0",
-		"react-native": "0.70.5",
-		"react-native-safe-area-context": "4.4.1",
-		"react-native-screens": "~3.18.0",
-		"react-native-sound": "^0.11.2",
-		"react-native-svg": "13.4.0",
-		"react-native-web": "~0.18.9",
+		"expo": "^51.0.0",
+		"expo-asset": "~10.0.10",
+		"expo-av": "~14.0.7",
+		"expo-cli": "^6.3.10",
+		"expo-constants": "~16.0.2",
+		"expo-font": "~12.0.10",
+		"expo-linking": "~6.3.1",
+		"expo-splash-screen": "~0.27.5",
+		"expo-status-bar": "~1.12.1",
+		"expo-system-ui": "~3.0.7",
+		"expo-web-browser": "~13.0.3",
+		"global": "^4.4.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-native": "0.74.5",
+		"react-native-safe-area-context": "4.10.5",
+		"react-native-screens": "3.31.1",
+		"react-native-svg": "15.2.0",
+		"react-native-web": "~0.19.10",
 		"react-redux": "^8.0.5"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.9",
-		"@types/react": "~18.0.24",
+		"@babel/core": "^7.24.0",
+		"@types/react": "~18.2.79",
 		"@types/react-native": "~0.70.6",
-		"jest": "^26.6.3",
-		"jest-expo": "~47.0.1",
+		"jest": "^29.4.0",
+		"jest-expo": "^51.0.0",
 		"react-test-renderer": "18.1.0",
-		"typescript": "^4.6.3"
+		"typescript": "~5.3.3"
 	},
 	"private": true
 }
