--- a/app.json
+++ b/app.json
@@ -2,16 +2,21 @@
 	"expo": {
 		"name": "Pomodoro timer",
 		"slug": "PomodoroTimer",
-		"version": "1.0.0",
+		"version": "1.0.00",
 		"orientation": "portrait",
 		"icon": "./assets/images/icon.png",
 		"scheme": "myapp",
 		"userInterfaceStyle": "automatic",
+		"sdkVersion": "33.0.0",
 		"splash": {
 			"image": "./assets/images/splash.png",
 			"resizeMode": "contain",
 			"backgroundColor": "#f0feff"
 		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
 		"ios": {
 			"supportsTablet": true
 		},
@@ -20,21 +25,13 @@
 				"foregroundImage": "./assets/images/adaptive-icon.png",
 				"backgroundColor": "#f0feff"
 			},
+			"versionCode": 6,
 			"package": "com.aliaksei.hryhoryeu.PomodoroTimer"
 		},
 		"web": {
-			"bundler": "metro",
-			"output": "static",
 			"favicon": "./assets/images/favicon.png"
 		},
-		"plugins": ["expo-router"],
-		"experiments": {
-			"typedRoutes": true
-		},
 		"extra": {
-			"router": {
-				"origin": false
-			},
 			"eas": {
 				"projectId": "ef43453a-d50c-4078-aac2-60c8495883bc"
 			}
