--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "pomodoro-mobile",
-	"version": "1.0.00",
-	"main": "node_modules/expo/AppEntry.js",
+	"name": "my-app",
+	"main": "expo-router/entry",
+	"version": "1.0.0",
 	"scripts": {
 		"start": "expo start",
 		"android": "expo start --android",
@@ -14,38 +14,32 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.2",
-		"@react-navigation/bottom-tabs": "^6.0.5",
-		"@react-navigation/native": "^6.0.2",
-		"@react-navigation/native-stack": "^6.1.0",
-		"@reduxjs/toolkit": "^1.9.2",
-		"expo": "^51.0.0",
-		"expo-asset": "~10.0.10",
-		"expo-av": "~14.0.7",
-		"expo-cli": "^6.3.10",
-		"expo-constants": "~16.0.2",
-		"expo-font": "~12.0.10",
+		"@reduxjs/toolkit": "^2.2.7",
+		"expo": "~51.0.28",
+		"expo-av": "^14.0.7",
+		"expo-font": "~12.0.9",
 		"expo-linking": "~6.3.1",
+		"expo-router": "^3.5.23",
 		"expo-splash-screen": "~0.27.5",
 		"expo-status-bar": "~1.12.1",
 		"expo-system-ui": "~3.0.7",
 		"expo-web-browser": "~13.0.3",
-		"global": "^4.4.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "0.74.5",
+		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
-		"react-native-svg": "15.2.0",
+		"react-native-svg": "^15.6.0",
 		"react-native-web": "~0.19.10",
-		"react-redux": "^8.0.5"
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.24.0",
-		"@types/react": "~18.2.79",
-		"@types/react-native": "~0.70.6",
-		"jest": "^29.4.0",
-		"jest-expo": "^51.0.0",
-		"react-test-renderer": "18.1.0",
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.2.45",
+		"jest": "^29.2.1",
+		"jest-expo": "~51.0.3",
+		"react-test-renderer": "18.2.0",
 		"typescript": "~5.3.3"
 	},
 	"private": true
