--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -2,6 +2,11 @@
 	"extends": "expo/tsconfig.base",
 	"compilerOptions": {
 		"strict": true,
-		"allowImportingTsExtensions": true
-	}
+		"allowImportingTsExtensions": true,
+
+		"paths": {
+			"@/*": ["./*"]
+		}
+	},
+	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
